Fix logout on swagger

--- a/src/main/webapp/logout_redirect.html
+++ b/src/main/webapp/logout_redirect.html
@@ -26,8 +26,8 @@
 <body>
 <script>
     var a=new window.XMLHttpRequest;
-    a.open('POST','/logout',0,'user','wrong'+(new Date).getTime().toString());a.send('');
-    window.location.href='/';
+    a.open('POST','/v1/logout/user',0,'user','wrong'+(new Date).getTime().toString());a.send('');
+    window.location.href='.';
 </script>
 </body>
 </html>
